--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "dotenv": "^16.6.1",
     "expo-server-sdk": "^3.15.0",
     "express": "^4.21.2",
+    "firebase-admin": "^12.0.0",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "morgan": "^1.10.1",
     "mysql2": "^3.14.3",
+    "node-fetch": "^2.7.0",
     "qrcode": "^1.5.4",
     "react-native-dotenv": "^3.4.11",
     "sequelize": "^6.37.7",
