--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,8 +2,8 @@
 nixPkgs = ["nodejs-18_x", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm run install"]
+cmds = ["cd backend && npm install"]
 
 [start]
-cmd = "npm start"
+cmd = "cd backend && npm start"
 
