Fix Railway build - ensure dependencies are installed during build phase

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,8 +3,7 @@ nixPkgs = ["nodejs-18_x", "npm-9_x"]
 
 [phases.install]
 cmds = [
-  "cd backend",
-  "npm install --production=false"
+  "cd backend && npm install --production=false --legacy-peer-deps"
 ]
 
 [start]
