--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SyncroGate - Backend API",
   "scripts": {
     "start": "cd backend && npm start",
-    "install": "cd backend && npm install"
+    "postinstall": "cd backend && npm install"
   },
   "engines": {
     "node": ">=18.0.0",
