--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.6.1",
     "expo-server-sdk": "^3.15.0",
     "express": "^4.21.2",
+    "express-validator": "^7.0.1",
     "firebase-admin": "^12.0.0",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
