--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -177,48 +177,58 @@ dependencies {
 }
 
 // Copy google-services.json to release/debug directories before Google Services plugin runs
-// Try multiple possible locations for the file
-task copyGoogleServices(type: Copy) {
-    def possibleSources = [
-        file("google-services.json"),  // Same directory (android/app/)
-        file("../../google-services.json"),  // Root frontend directory
-        file("src/main/google-services.json")  // Alternative location
-    ]
-    
-    def sourceFile = possibleSources.find { it.exists() }
-    def targetDir = file("src/release")
-    
-    if (sourceFile) {
-        targetDir.mkdirs()
-        from sourceFile
-        into targetDir
-        println "✅ Copied google-services.json from ${sourceFile.absolutePath} to ${targetDir.absolutePath}"
-    } else {
-        println "❌ ERROR: google-services.json not found in any of these locations:"
-        possibleSources.each { println "   - ${it.absolutePath}" }
-        throw new GradleException("google-services.json is required but not found. Please ensure it exists in android/app/ or frontend root.")
+// Use projectDir to get absolute paths
+task copyGoogleServices {
+    doLast {
+        def projectRoot = projectDir.parentFile.parentFile  // Go up to frontend root
+        def possibleSources = [
+            new File(projectDir, "google-services.json"),  // android/app/google-services.json
+            new File(projectRoot, "google-services.json"),  // frontend/google-services.json
+            new File(projectDir, "src/main/google-services.json")  // Alternative
+        ]
+        
+        def sourceFile = possibleSources.find { it.exists() }
+        def targetDir = new File(projectDir, "src/release")
+        
+        if (sourceFile) {
+            targetDir.mkdirs()
+            copy {
+                from sourceFile
+                into targetDir
+            }
+            println "✅ Copied google-services.json from ${sourceFile.absolutePath} to ${targetDir.absolutePath}"
+        } else {
+            println "❌ ERROR: google-services.json not found in any of these locations:"
+            possibleSources.each { println "   - ${it.absolutePath} (exists: ${it.exists()})" }
+            throw new GradleException("google-services.json is required but not found. Please ensure it exists in android/app/ or frontend root.")
+        }
     }
 }
 
-task copyGoogleServicesDebug(type: Copy) {
-    def possibleSources = [
-        file("google-services.json"),  // Same directory (android/app/)
-        file("../../google-services.json"),  // Root frontend directory
-        file("src/main/google-services.json")  // Alternative location
-    ]
-    
-    def sourceFile = possibleSources.find { it.exists() }
-    def targetDir = file("src/debug")
-    
-    if (sourceFile) {
-        targetDir.mkdirs()
-        from sourceFile
-        into targetDir
-        println "✅ Copied google-services.json from ${sourceFile.absolutePath} to ${targetDir.absolutePath}"
-    } else {
-        println "❌ ERROR: google-services.json not found in any of these locations:"
-        possibleSources.each { println "   - ${it.absolutePath}" }
-        throw new GradleException("google-services.json is required but not found. Please ensure it exists in android/app/ or frontend root.")
+task copyGoogleServicesDebug {
+    doLast {
+        def projectRoot = projectDir.parentFile.parentFile  // Go up to frontend root
+        def possibleSources = [
+            new File(projectDir, "google-services.json"),  // android/app/google-services.json
+            new File(projectRoot, "google-services.json"),  // frontend/google-services.json
+            new File(projectDir, "src/main/google-services.json")  // Alternative
+        ]
+        
+        def sourceFile = possibleSources.find { it.exists() }
+        def targetDir = new File(projectDir, "src/debug")
+        
+        if (sourceFile) {
+            targetDir.mkdirs()
+            copy {
+                from sourceFile
+                into targetDir
+            }
+            println "✅ Copied google-services.json from ${sourceFile.absolutePath} to ${targetDir.absolutePath}"
+        } else {
+            println "❌ ERROR: google-services.json not found in any of these locations:"
+            possibleSources.each { println "   - ${it.absolutePath} (exists: ${it.exists()})" }
+            throw new GradleException("google-services.json is required but not found. Please ensure it exists in android/app/ or frontend root.")
+        }
     }
 }
 
