Remove notification color config to fix manifest merger conflict

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -55,8 +55,7 @@
       [
         "expo-notifications",
         {
-          "icon": "./src/assets/SG.png",
-          "color": "#ffffff"
+          "icon": "./src/assets/SG.png"
         }
       ],
       [
